add sharing details

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MiraPort</title>
+    <meta property=’og:title’ content='MiraPort'/>
+    <meta property=’og:image’ content='https://imgur.com/Y2zOBIv’/>
+    <meta property=’og:description’ content='Mira Portfolio website which shows the information about him'/>
+    <meta property=’og:url’ content='https://miraport.vercel.app/'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content='website'/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
