--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MiraPort</title>
-    <meta property=’og:title’ content='MiraPort'/>
-    <meta property=’og:image’ content='https://imgur.com/Y2zOBIv’/>
-    <meta property=’og:description’ content='Mira Portfolio website which shows the information about him'/>
-    <meta property=’og:url’ content='https://miraport.vercel.app/'/>
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='627' />
-    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
-    <meta property="og:type" content='website'/>
+
+    <meta property="og:image" content="https://i.imgur.com/Y2zOBIv.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="627">
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
